--- a/conta/.htaccess
+++ b/conta/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|img|css|js|upload|application|robots\.txt)
+RewriteCond $1 !^(index\.php|img|css|js|upload|meu_painel|robots\.txt)
 RewriteRule ^(.*)$ index.php/$1 [L]
