--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|img|css|js|upload|core|examples|PagSeguroLibrary|robots\.txt)
+RewriteCond $1 !^(index\.php|img|css|js|upload|core|exception|PagSeguroLibrary|robots\.txt)
 RewriteRule ^(.*)$ index.php/$1 [L]
